...
      child: movieInfoCard(movie: movie),
    );
  }

  Card movieInfoCard({required Movie movie}) {
    return Card(
      key: const Key('search card'),
      child: ListTile(
        title: Text(movie.title ?? ''),
        leading: SizedBox(
          child: NetworkImageWithRadius(
            posterPathValue: movie.posterPathValue,
          ),
...
